--- a/WzorceProjektowe/Kreacyjne/FactoryAbstract2/pom.xml
+++ b/WzorceProjektowe/Kreacyjne/FactoryAbstract2/pom.xml
@@ -20,6 +20,12 @@
             <version>4.13.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
