--- a/WzorceProjektowe/Kreacyjne/FactoryMethod2/pom.xml
+++ b/WzorceProjektowe/Kreacyjne/FactoryMethod2/pom.xml
@@ -14,6 +14,12 @@
             <version>1.18.28</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
