--- a/WzorceProjektowe/Strukturalne/Adapter3/pom.xml
+++ b/WzorceProjektowe/Strukturalne/Adapter3/pom.xml
@@ -7,6 +7,20 @@
     <groupId>co.devfoundry</groupId>
     <artifactId>basic-design-patterns</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
