--- a/WzorceProjektowe/Behawioralne/State2/pom.xml
+++ b/WzorceProjektowe/Behawioralne/State2/pom.xml
@@ -5,8 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>co.devfoundry</groupId>
-    <artifactId>basic-design-patterns</artifactId>
+    <artifactId>state2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
