--- a/WzorceProjektowe/Behawioralne/State3/pom.xml
+++ b/WzorceProjektowe/Behawioralne/State3/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>co.devfoundry</groupId>
-    <artifactId>basic-design-patterns</artifactId>
+    <artifactId>stan3</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
