--- a/WzorceProjektowe/Behawioralne/State3/pom.xml
+++ b/WzorceProjektowe/Behawioralne/State3/pom.xml
@@ -7,6 +7,14 @@
     <groupId>co.devfoundry</groupId>
     <artifactId>stan3</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
